<?xml version="1.0"?>
<package format="2">
  <name>robot_suite</name>
  <version>0.0.0</version>
  <description>The robot_suite package</description>

  <maintainer email="joeyyang.ai@gmail.com">Joey Yang</maintainer>

  <author email="joeyyang.ai@gmail.com">Joey Yang</author>

  <license>BSD</license>

  <url type="repository">http://wiki.ros.org/robot_suite</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>perception_suite</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
